--- a/style.css
+++ b/style.css
@@ -315,3 +315,47 @@ h3{
     }
 }
 /* footer css code end */
+
+/* about us css code start */
+
+.sub_header {
+    height: 80vh ;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,.7),rgba(4,9,30,.7)),url(images/background.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color : #fff;
+}
+.sub_header h1 {
+    margin-top: 200px;
+}
+.about_us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.about_column{
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+.about_column img{
+    width: 100%;
+}
+.about_column h1 {
+    padding-top: 0;
+    color: orangered;
+}
+.about_column p {
+    padding: 15px 0 25px;
+    text-align: justify;
+}
+.red_btn {
+    border: 1px solid orange;
+    color : black
+}
+.red_btn:hover {
+    background-color : rgb(252, 61, 61);
+    color: white;
+}
