--- a/style.css
+++ b/style.css
@@ -420,3 +420,33 @@ h3{
     margin: 10px 0;
 }
 /* blog content css code end */
+
+/* contact us css code start*/
+.location {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0 ;
+}
+.location iframe {
+    width: 100%;
+}
+.contact_us{
+    width: 80%;
+    margin: auto;
+}
+.contact_column {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+.contact_column div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact_column .fas {
+    font-size: 20px;
+    margin: 10px;
+    margin-right: 30px;
+}
+/* contact us css code end*/
